menu z-index fix

--- a/frontend/styles/scaffold.scss
+++ b/frontend/styles/scaffold.scss
@@ -15,6 +15,7 @@ body{
 }
 #menu{
   position: absolute;
+  z-index: 1;
 }
 #header h3{
   margin: 0;
