--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body{
 }
 #menu{
   position: absolute;
+  z-index: 1;
 }
 #header h3{
   margin: 0;
